finished wrangling exercise

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -332,16 +332,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 139,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-RECORD 0--------------------------------------\n",
+      " source_id              | CRM_Listener         \n",
+      " dept_division          | Code Enforcement     \n",
+      " case_id                | 1014759619           \n",
+      " case_opened_date       | 2018-08-08 10:38:00  \n",
+      " case_closed_date       | null                 \n",
+      " case_due_date          | 2018-08-22 10:38:00  \n",
+      " case_late              | false                \n",
+      " num_days_late          | -13.44305556         \n",
+      " case_closed            | false                \n",
+      " service_request_type   | Bandit Signs         \n",
+      " SLA_days               | 14.0                 \n",
+      " case_status            | Open                 \n",
+      " request_address        | 1935  MILITARY DR... \n",
+      " council_district       | 3                    \n",
+      " dept_name              | Code Enforcement ... \n",
+      " standardized_dept_name | DSD/Code Enforcement \n",
+      " dept_subject_to_SLA    | YES                  \n",
+      " source_username        | CRM_Listener         \n",
+      " year                   | null                 \n",
+      " num_hours_late         | -322.63333344        \n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(\n",
+    "    df\n",
+    "    .where(col(\"num_days_late\").isNotNull())\n",
+    "    .filter(col('case_closed')=='false')\n",
+    "    .sort(col(\"case_opened_date\").desc())\n",
+    "    .show(1, vertical=True)\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- How many Stray Animal cases are there?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27361"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df\\\n",
+    ".filter(col('service_request_type')=='Stray Animal')\\\n",
+    ".count()\\\n"
    ]
   },
   {
@@ -352,10 +414,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------+\n",
+      "|service_request_type           |\n",
+      "+-------------------------------+\n",
+      "|Animal Permits Request         |\n",
+      "|Injured Animal(Critical)       |\n",
+      "|Animal Bite(Non-Critical)      |\n",
+      "|Stray Animal                   |\n",
+      "|Trapped/Confined Animal        |\n",
+      "|City Council Animal Request    |\n",
+      "|Aggressive Animal(Non-Critical)|\n",
+      "|Animal Bite(Critical)          |\n",
+      "|Public Nuisance(Own Animal)    |\n",
+      "|Aggressive Animal(Critical)    |\n",
+      "|Animal Cruelty(Critical)       |\n",
+      "|Spay/Neuter Request Response   |\n",
+      "|Animal Neglect                 |\n",
+      "+-------------------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_service_type = df\\\n",
+    ".filter(col('dept_division')=='Field Operations')\\\n",
+    ".filter(col('service_request_type')!='Officer Standby')\\\n",
+    ".select('service_request_type')\\\n",
+    ".distinct()\n",
+    "\n",
+    "unique_service_type.show(truncate=False)\n",
+    "unique_service_type.count()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Convert the council_district column to a string column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('council_district', 'string')]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.withColumn('council_district', col('council_district').cast('string'))\n",
+    "df.select('council_district').dtypes"
    ]
   },
   {
@@ -366,6 +500,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-RECORD 0--------------------------------------\n",
+      " source_id              | svcCRMLS             \n",
+      " dept_division          | Field Operations     \n",
+      " case_id                | 1014127332           \n",
+      " case_opened_date       | 2018-01-01 00:42:00  \n",
+      " case_closed_date       | 2018-01-01 12:29:00  \n",
+      " case_due_date          | 2020-09-26 00:42:00  \n",
+      " case_late              | false                \n",
+      " num_days_late          | -998.5087616000001   \n",
+      " case_closed            | true                 \n",
+      " service_request_type   | Stray Animal         \n",
+      " SLA_days               | 999.0                \n",
+      " case_status            | Closed               \n",
+      " request_address        | 2315  EL PASO ST,... \n",
+      " council_district       | 5                    \n",
+      " dept_name              | Animal Care Services \n",
+      " standardized_dept_name | Animal Care Services \n",
+      " dept_subject_to_SLA    | YES                  \n",
+      " source_username        | svcCRMLS             \n",
+      " year                   | 2018                 \n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.withColumn('year', year('case_closed_date'))\n",
+    "df.show(1,vertical=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -373,10 +546,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-RECORD 0--------------------------------------\n",
+      " source_id              | svcCRMLS             \n",
+      " dept_division          | Field Operations     \n",
+      " case_id                | 1014127332           \n",
+      " case_opened_date       | 2018-01-01 00:42:00  \n",
+      " case_closed_date       | 2018-01-01 12:29:00  \n",
+      " case_due_date          | 2020-09-26 00:42:00  \n",
+      " case_late              | false                \n",
+      " num_days_late          | -998.5087616000001   \n",
+      " case_closed            | true                 \n",
+      " service_request_type   | Stray Animal         \n",
+      " SLA_days               | 999.0                \n",
+      " case_status            | Closed               \n",
+      " request_address        | 2315  EL PASO ST,... \n",
+      " council_district       | 5                    \n",
+      " dept_name              | Animal Care Services \n",
+      " standardized_dept_name | Animal Care Services \n",
+      " dept_subject_to_SLA    | YES                  \n",
+      " source_username        | svcCRMLS             \n",
+      " year                   | 2018                 \n",
+      " num_hours_late         | -23964.2102784       \n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "- Join the case data with the source and department data."
+    "df = df.withColumn('num_hours_late', col('num_days_late')*24)\n",
+    "df.show(1,vertical=True)"
    ]
   },
   {
@@ -387,10 +593,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.where(col('source_id').isNull()).count()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- What are the top 10 service request types in terms of number of requests?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+\n",
+      "|service_request_type|count|\n",
+      "+--------------------+-----+\n",
+      "|           No Pickup|89210|\n",
+      "|Overgrown Yard/Trash|66403|\n",
+      "|        Bandit Signs|32968|\n",
+      "|        Damaged Cart|31163|\n",
+      "|Front Or Side Yar...|28920|\n",
+      "|        Stray Animal|27361|\n",
+      "|Aggressive Animal...|25492|\n",
+      "|Cart Exchange Req...|22608|\n",
+      "|Junk Vehicle On P...|21649|\n",
+      "|     Pot Hole Repair|20827|\n",
+      "+--------------------+-----+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(\n",
+    "    df\n",
+    "    .groupBy('service_request_type')\n",
+    "    .count()\n",
+    "    .sort(col(\"count\").desc())\n",
+    "    .show(10)\n",
+    ")"
    ]
   },
   {
@@ -401,6 +667,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------------------------+------------------+\n",
+      "|service_request_type                  |average_days_late |\n",
+      "+--------------------------------------+------------------+\n",
+      "|Zoning: Junk Yards                    |175.95636210420943|\n",
+      "|Labeling for Used Mattress            |162.43032902285717|\n",
+      "|Record Keeping of Used Mattresses     |153.99724039428568|\n",
+      "|Signage Requied for Sale of Used Mattr|151.63868055333333|\n",
+      "|Storage of Used Mattress              |142.11255641500003|\n",
+      "|Zoning: Recycle Yard                  |135.92851612479797|\n",
+      "|Donation Container Enforcement        |131.75610506358706|\n",
+      "|License Requied Used Mattress Sales   |128.79828704142858|\n",
+      "|Traffic Signal Graffiti               |101.79846062200002|\n",
+      "|Complaint                             |72.8705023031169  |\n",
+      "+--------------------------------------+------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(\n",
+    "    df\n",
+    "    .where(col(\"num_days_late\").isNotNull())\n",
+    "    .groupBy('service_request_type')\n",
+    "    .agg(avg('num_days_late').alias('average_days_late'))\n",
+    "    .sort(col('average_days_late').desc())\n",
+    "    .show(10, truncate =False)\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -408,10 +713,153 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------+-------------------+\n",
+      "|standardized_dept_name  |average_days_late  |\n",
+      "+------------------------+-------------------+\n",
+      "|Customer Service        |59.73709149630077  |\n",
+      "|Solid Waste             |-2.200057513672164 |\n",
+      "|Metro Health            |-4.911766979607004 |\n",
+      "|Parks & Recreation      |-5.251521960055145 |\n",
+      "|Trans & Cap Improvements|-20.612837354052708|\n",
+      "|DSD/Code Enforcement    |-38.36938892614506 |\n",
+      "|Animal Care Services    |-226.51783940550334|\n",
+      "+------------------------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(\n",
+    "    df\n",
+    "    .where(col(\"num_days_late\").isNotNull())\n",
+    "    .groupBy('standardized_dept_name')\n",
+    "    .agg(avg('num_days_late').alias('average_days_late'))\n",
+    "    .sort(col('average_days_late').desc())\n",
+    "    .show(10, truncate =False)\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- How do number of days late depend on department and request type?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------+--------------------+------------------+\n",
+      "|standardized_dept_name|service_request_type| average_days_late|\n",
+      "+----------------------+--------------------+------------------+\n",
+      "|  DSD/Code Enforcement|  Zoning: Junk Yards|175.95636210420943|\n",
+      "|  DSD/Code Enforcement|Labeling for Used...|162.43032902285717|\n",
+      "|  DSD/Code Enforcement|Record Keeping of...|153.99724039428568|\n",
+      "|  DSD/Code Enforcement|Signage Requied f...|151.63868055333333|\n",
+      "|  DSD/Code Enforcement|Storage of Used M...|142.11255641500003|\n",
+      "|  DSD/Code Enforcement|Zoning: Recycle Yard|135.92851612479797|\n",
+      "|  DSD/Code Enforcement|Donation Containe...|131.75610506358706|\n",
+      "|  DSD/Code Enforcement|License Requied U...|128.79828704142858|\n",
+      "|  Trans & Cap Impro...|Traffic Signal Gr...|101.79846062200002|\n",
+      "|      Customer Service|           Complaint|  72.8705023031169|\n",
+      "+----------------------+--------------------+------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(\n",
+    "    df\n",
+    "    .where(col(\"num_days_late\").isNotNull())\n",
+    "    .groupBy('standardized_dept_name','service_request_type')\n",
+    "    .agg(avg('num_days_late').alias('average_days_late'))\n",
+    "    .sort(col('average_days_late').desc())\n",
+    "    .show(10)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- You might have noticed that the latest date in the dataset is fairly far off from the present day. To account for this, replace any occurances of the current time with the maximum date from the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-RECORD 0--------------------------------------\n",
+      " source_id              | svcCRMLS             \n",
+      " dept_division          | Field Operations     \n",
+      " case_id                | 1014127332           \n",
+      " case_opened_date       | 2018-01-01 00:42:00  \n",
+      " case_closed_date       | 2018-01-01 12:29:00  \n",
+      " case_due_date          | 2020-09-26 00:42:00  \n",
+      " case_late              | false                \n",
+      " num_days_late          | -998.5087616000001   \n",
+      " case_closed            | true                 \n",
+      " service_request_type   | Stray Animal         \n",
+      " SLA_days               | 999.0                \n",
+      " case_status            | Closed               \n",
+      " request_address        | 2315  EL PASO ST,... \n",
+      " council_district       | 5                    \n",
+      " dept_name              | Animal Care Services \n",
+      " standardized_dept_name | Animal Care Services \n",
+      " dept_subject_to_SLA    | YES                  \n",
+      " source_username        | svcCRMLS             \n",
+      " year                   | 2018                 \n",
+      " num_hours_late         | -23964.2102784       \n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(1,vertical =True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------+\n",
+      "|max(case_closed_date)|\n",
+      "+---------------------+\n",
+      "|  2018-08-08 10:38:00|\n",
+      "+---------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_date = df.agg(max('case_closed_date'))\n",
+    "max_date.show()"
    ]
   },
   {
@@ -456,7 +904,7 @@
     "width": "236.989px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
