--- a/spark101.ipynb
+++ b/spark101.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 227,
    "metadata": {
     "scrolled": false
    },
@@ -256,15 +256,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+\n",
-      "|         description|\n",
-      "+--------------------+\n",
-      "|The 1999 audi a4 ...|\n",
-      "|The 1999 audi a4 ...|\n",
-      "|The 2008 audi a4 ...|\n",
-      "|The 2008 audi a4 ...|\n",
-      "|The 1999 audi a4 ...|\n",
-      "+--------------------+\n",
+      "+----------------------------------------+\n",
+      "|description                             |\n",
+      "+----------------------------------------+\n",
+      "|The 1999 audi a4 has a 4 cylinder engine|\n",
+      "|The 1999 audi a4 has a 4 cylinder engine|\n",
+      "|The 2008 audi a4 has a 4 cylinder engine|\n",
+      "|The 2008 audi a4 has a 4 cylinder engine|\n",
+      "|The 1999 audi a4 has a 6 cylinder engine|\n",
+      "+----------------------------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -275,7 +275,7 @@
     "                  mpg.year, lit(' '),\n",
     "                  mpg.manufacturer, lit(' '),\n",
     "                  mpg.model ,lit(\" has a \"),\n",
-    "                  mpg.cyl,lit(' cylinder engine')).alias(\"description\"),).show(5)"
+    "                  mpg.cyl,lit(' cylinder engine')).alias(\"description\"),).show(5,truncate = False)"
    ]
   },
   {
@@ -365,11 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import concat, sum, avg, min, max, count, mean"
+    "from pyspark.sql.functions import *"
    ]
   },
   {
@@ -399,6 +399,35 @@
    "metadata": {},
    "source": [
     "- Create a column that contains the tip percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----+------+------+---+------+----+-----------------+\n",
+      "|total_bill| tip|   sex|smoker|day|  time|size|tip_percentatge %|\n",
+      "+----------+----+------+------+---+------+----+-----------------+\n",
+      "|     16.99|1.01|Female|    No|Sun|Dinner|   2|              6.0|\n",
+      "|     10.34|1.66|  Male|    No|Sun|Dinner|   3|             16.0|\n",
+      "|     21.01| 3.5|  Male|    No|Sun|Dinner|   3|             17.0|\n",
+      "|     23.68|3.31|  Male|    No|Sun|Dinner|   2|             14.0|\n",
+      "|     24.59|3.61|Female|    No|Sun|Dinner|   4|             15.0|\n",
+      "+----------+----+------+------+---+------+----+-----------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tips.withColumn('tip_percentatge %',\n",
+    "    round((tips.tip /tips.total_bill *100 ),0)\n",
+    ").show(5)"
    ]
   },
   {
@@ -443,7 +472,7 @@
    "cell_type": "code",
    "execution_count": 98,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -464,6 +493,32 @@
    ],
    "source": [
     "tips.groupBy(\"sex\", \"smoker\").agg(avg((tips.tip /tips.total_bill *100 ))).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----------------+------------------+\n",
+      "|   sex|               No|               Yes|\n",
+      "+------+-----------------+------------------+\n",
+      "|Female|15.69209707691836| 18.21503526994103|\n",
+      "|  Male|16.06687151291298|15.277117520248513|\n",
+      "+------+-----------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tip_percentage = (tips.tip /tips.total_bill *100 )\n",
+    "tips.groupby('sex').pivot('smoker').agg(avg(tip_percentage)).show()"
    ]
   },
   {
@@ -773,21 +828,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+-------+----------------------+\n",
-      "|year|weather|(count(weather) / 365)|\n",
-      "+----+-------+----------------------+\n",
-      "|2013|   rain|    0.1643835616438356|\n",
-      "|2015|   rain|    0.0136986301369863|\n",
-      "|2012|   rain|    0.5232876712328767|\n",
-      "|2014|   rain|   0.00821917808219178|\n",
-      "+----+-------+----------------------+\n",
+      "+----+-------+-------------------+\n",
+      "|year|weather| percentage_of_days|\n",
+      "+----+-------+-------------------+\n",
+      "|2013|   rain| 0.1643835616438356|\n",
+      "|2015|   rain| 0.0136986301369863|\n",
+      "|2012|   rain| 0.5232876712328767|\n",
+      "|2014|   rain|0.00821917808219178|\n",
+      "+----+-------+-------------------+\n",
       "\n"
      ]
     }
@@ -797,7 +852,7 @@
     "    weather.withColumn(\"year\", year(\"date\"))\n",
     "    .filter(weather.weather =='rain')\n",
     "    .groupBy(\"year\",\"weather\")\n",
-    "    .agg(count(\"weather\")/365)\n",
+    "    .agg((count(\"weather\")/365).alias('percentage_of_days'))\n",
     "    .show()\n",
     ")"
    ]
