--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        " ('council_district', 'int')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -360,8 +360,6 @@
       " standardized_dept_name | DSD/Code Enforcement \n",
       " dept_subject_to_SLA    | YES                  \n",
       " source_username        | CRM_Listener         \n",
-      " year                   | null                 \n",
-      " num_hours_late         | -322.63333344        \n",
       "only showing top 1 row\n",
       "\n"
      ]
@@ -386,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +393,7 @@
        "27361"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +413,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116295"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df\\\n",
+    ".filter(col('dept_division')=='Field Operations')\\\n",
+    ".filter(col('service_request_type')!='Officer Standby')\\\n",
+    ".count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +469,7 @@
        "13"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +503,7 @@
        "[('council_district', 'string')]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -605,7 +626,7 @@
        "0"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -714,24 +735,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------+-------------------+\n",
-      "|standardized_dept_name  |average_days_late  |\n",
-      "+------------------------+-------------------+\n",
-      "|Customer Service        |59.73709149630077  |\n",
-      "|Solid Waste             |-2.200057513672164 |\n",
-      "|Metro Health            |-4.911766979607004 |\n",
-      "|Parks & Recreation      |-5.251521960055145 |\n",
-      "|Trans & Cap Improvements|-20.612837354052708|\n",
-      "|DSD/Code Enforcement    |-38.36938892614506 |\n",
-      "|Animal Care Services    |-226.51783940550334|\n",
-      "+------------------------+-------------------+\n",
+      "+------------------------+------------------+\n",
+      "|standardized_dept_name  |average_days_late |\n",
+      "+------------------------+------------------+\n",
+      "|Customer Service        |88.18248182589822 |\n",
+      "|DSD/Code Enforcement    |49.506339986350454|\n",
+      "|Animal Care Services    |23.4467296347382  |\n",
+      "|Parks & Recreation      |22.427807192724135|\n",
+      "|Trans & Cap Improvements|10.662950455078674|\n",
+      "|Solid Waste             |7.1471727895574135|\n",
+      "|Metro Health            |6.494699602827871 |\n",
+      "+------------------------+------------------+\n",
       "\n"
      ]
     }
@@ -739,6 +760,7 @@
    "source": [
     "(\n",
     "    df\n",
+    "    .filter('case_late') # just look at the late cases.\n",
     "    .where(col(\"num_days_late\").isNotNull())\n",
     "    .groupBy('standardized_dept_name')\n",
     "    .agg(avg('num_days_late').alias('average_days_late'))\n",
@@ -756,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
